--- a/env/includes/maya/shot.yml
+++ b/env/includes/maya/shot.yml
@@ -21,7 +21,7 @@ includes:
 maya.shot:
   apps:
 
-  tk-multi-workfiles2: '@common.settings.tk-multi-workfiles2.launch_st_startup'
+    tk-multi-workfiles2: '@common.settings.tk-multi-workfiles2'
 
     tk-multi-about: '@common.apps.tk-multi-about'
 
